# drake

./: README.md
examples/acrobot/test/: run_swing_up_traj_optimization.cc
examples/double_pendulum_pid/: BUILD.bazel  run_double_pendulum_passive.cc  run_double_pendulum_pid.cc
examples/eve/: BUILD.bazel  eve_common.cc  eve_common.h  run_eve_IDC_demo.cc  run_eve_base_tracking_demo.cc  run_eve_collocation.cc  run_eve_com.cc  run_eve_constant_load_demo.cc  run_eve_display_trajectory.cc  run_eve_linear_trajectory.cc  run_eve_lqr_demo.cc  run_eve_mathematical_program.cc  run_eve_pid_controller_demo.cc  run_eve_revolute_spring_demo.cc  run_eve_wheel_demo.cc  run_eve_zmp.cc  run_eve_zmp_x.cc  run_eve_zmp_xy.cc
examples/hello/: BUILD.bazel  hello.cc
examples/kuka_iiwa_arm_idc/: BUILD.bazel  run_kuka_idc_demo.cc
examples/multibody/cart_pole/: BUILD.bazel  cart_pole_lqr.cc  cart_pole_trajectory.cc
examples/simple_arm/: BUILD.bazel  run_simple_arm.cc
manipulation/models/eve/: BUILD.bazel  package.xml
manipulation/models/eve/meshes/: 7dof_elbow.dae  7dof_forearm.dae  7dof_palm.dae  7dof_scapula.dae  7dof_shoulder.dae  7dof_upper_arm.dae  7dof_wrist.dae  abdomen.dae  ankle.dae  base.dae  base_fixed.dae  base_fixed.obj.mtl  base_wheels.dae  elbow.dae  head.dae  hip.dae  lower_arm.dae  palm_left.dae  palm_right.dae  scapula.dae  shoulder.dae  thigh.dae  upper_arm.dae  wheel.dae  wrist.dae
manipulation/models/eve/sdf/: eve_2dof_base_no_collision.sdf  eve_7dof_arms_relative_base_no_collision.sdf  eve_7dof_arms_relative_base_sphere_collision.sdf
manipulation/models/eve/urdf/: eve_0dof_base.sdf  eve_0dof_base.urdf  eve_7dof_arms.urdf  eve_7dof_arms_relative.urdf  eve_7dof_arms_relative_base_collision.urdf  eve_7dof_arms_relative_base_no_collision.urdf  eve_7dof_arms_relative_no_collision.urdf  eve_7dof_arms_relative_no_hand.urdf  eve_7dof_arms_relative_no_hand_base.urdf
manipulation/models/qb_hand_description/: BUILD.bazel  package.xml
manipulation/models/simple_arm/: BUILD.bazel  model.sdf  package.xml
math/: discrete_algebraic_riccati_equation.cc
multibody/benchmarks/inclined_plane/: inclined_plane_plant.cc
multibody/plant/: multibody_plant.cc  multibody_plant.h
multibody/plant/test/: multibody_plant_com_test.cc
multibody/tree/: multibody_tree.cc  multibody_tree.h
systems/controllers/: inverse_dynamics.cc  linear_quadratic_regulator.cc
systems/framework/: context_base.h
tools/workspace/drake_visualizer/plugin/: BUILD.bazel  show_trajectory.py
