# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_binary(
    name = "run_eve_lqr_demo",
    srcs = ["run_eve_lqr_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_wheel_demo",
    srcs = ["run_eve_wheel_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_IDC_demo",
    srcs = ["run_eve_IDC_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_pid_controller_demo",
    srcs = ["run_eve_pid_controller_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:matrix_gain",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_revolute_spring_demo",
    srcs = ["run_eve_revolute_spring_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/primitives:constant_vector_source",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

# === test/ ===

add_lint_tests()
