# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_library(
    name = "eve_common",
    srcs = ["eve_common.cc"],
    hdrs = ["eve_common.h"],
    deps = [
        "//geometry:geometry_visualization",
        "//lcm",
        "//lcmtypes:contact_results_for_viz",
        "//lcmtypes:viewer",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_base_tracking_demo",
    srcs = ["run_eve_base_tracking_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        ":eve_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//common/proto:call_python",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_mathematical_program",
    srcs = ["run_eve_mathematical_program.cc"],
    deps = [
        "//solvers:solve",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_com",
    srcs = ["run_eve_com.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        ":eve_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//lcmtypes:viewer",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_zmp",
    testonly = 1,
    srcs = ["run_eve_zmp_xy.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        ":eve_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//lcmtypes:viewer",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//solvers:solve",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/controllers:zmp_test_util",
        "//systems/framework",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_zmp_x",
    testonly = 1,
    srcs = ["run_eve_zmp_x.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        ":eve_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//lcmtypes:viewer",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/controllers:zmp_test_util",
        "//systems/framework",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_display_trajectory",
    testonly = 1,
    srcs = ["run_eve_display_trajectory.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        ":eve_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//common/proto:call_python",
        "//geometry:geometry_visualization",
        "//lcm",
        "//lcmtypes:viewer",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/controllers:zmp_test_util",
        "//systems/framework",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_lqr_demo",
    srcs = ["run_eve_lqr_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_wheel_demo",
    testonly = 1,
    srcs = ["run_eve_wheel_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        ":eve_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//common/proto:call_python",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//solvers:solve",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/controllers:zmp_test_util",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_IDC_demo",
    srcs = ["run_eve_IDC_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_pid_controller_demo",
    srcs = ["run_eve_pid_controller_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/controllers",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:matrix_gain",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_eve_revolute_spring_demo",
    srcs = ["run_eve_revolute_spring_demo.cc"],
    data = [
        "//manipulation/models/eve:models",
        "//manipulation/models/qb_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis",
        "//systems/primitives:constant_vector_source",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

# === test/ ===

add_lint_tests()
